[metadata]
name = sup-dolphin-memory-lib
version = 0.1.2
author = sup39
author_email = sms@sup39.dev
description = A Python library for reading and writing the memory of an emulated game in Dolphin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sup39/sup-dolphin-memory-lib
license = MIT
project_urls =
  Bug Tracker = https://github.com/sup39/sup-dolphin-memory-lib/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  psutil ~= 5.9

[options.packages.find]
where = src
